[package]
name = "gg"
version = "0.1.0"
authors = ["kfb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
config = "0.9.3"
reqwest = "0.9.19"
serde = "1.0.99"
serde_json = "1.0.40"
